проект путешествие версия 1.7 +правки ревью

--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -7,6 +7,11 @@
   color: #fff;
   text-decoration-line: none;
   margin-right: 18px;
+  transition: opacity 1s ease;
+}
+
+.header__lang-link:hover {
+  opacity: .8;
 }
 
 .header__lang-link:last-of-type {
