--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -8,4 +8,9 @@
   text-decoration-line: underline;
   margin: 12px 0 0;
   color: #FFFFFF;
+  transition: opacity 1s ease;
+}
+
+.place__link:hover {
+  opacity: .8;
 }
