--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -6,7 +6,7 @@
   line-height: 76px;
   /* or 106% */
   width: 100%;
-  margin: 80px 0 0;
+  margin: 0;
   color: #FFFFFF;
 }
 
@@ -22,6 +22,5 @@
     font-size: 32px;
     line-height: 35px;
     max-width: 288px;
-    margin: 50px auto 0;
   }
 }
