--- a/blocks/page/__cover/page__cover.css
+++ b/blocks/page/__cover/page__cover.css
@@ -2,6 +2,13 @@
   margin: 92px auto;
 }
 
+@media screen and (max-width: 1023px) {
+  .page__cover {
+    margin: 90px auto 88px;
+  }
+}
+
+
 @media screen and (max-width: 767px) {
   .page__cover {
     margin: 66px auto 64px;
